--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
 						<button type="button" id="video-button">
 							<img id="video-icon" width="82" height="82" src="./img/play.svg" alt="play">
 						</button>
-						<!-- <img src="./img/video.png" alt="video"> -->
-						<video class="video-story" id="video">
+						<video class="video-story" id="video" poster="./img/cover.png">
 							<source src="./img/Woman opens laptop at airport.mp4" type="video/mp4">
 						</video>
 					</div>
