--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
 						<button type="button" id="video-button">
 							<img id="video-icon" width="82" height="82" src="./img/play.svg" alt="play">
 						</button>
-						<video class="video-story" id="video" poster="./img/cover.png">
-							<source src="./img/Woman opens laptop at airport.mp4" type="video/mp4">
+						<video class="video-story" id="video" controls poster="./img/cover.png"
+							src="./img/Woman opens laptop at airport.mp4" type="video/mp4">
+							<!-- <source src="./img/Woman opens laptop at airport.mp4" type="video/mp4"> -->
 						</video>
 					</div>
 				</div>
